# Graphic_Editor

./: CMakeLists.txt  figure.cpp  figure.h  form.cpp  form.h  form.ui  frame.h  grobject.cpp  grobject.h  group.cpp  group.h  main.cpp  painter.cpp  painter.h  proplist.cpp  proplist.h  setofprops.cpp  setofprops.h
Controller/: action.cpp  action.h  controller.cpp  controller.h  createstate.cpp  createstate.h  dragstate.cpp  dragstate.h  state.cpp  state.h  statecollection.cpp  statecollection.h  statestore.h
Model/: factory.cpp  factory.h  figure.cpp  figure.h  frame.cpp  frame.h  grobject.h  group.cpp  group.h  groupdealler.cpp  groupdealler.h  model.cpp  model.h  objectstore.cpp  objectstore.h  paintcontroller.cpp  paintcontroller.h  painter.cpp  painter.h  propdealer.cpp  propdealer.h  proplist.cpp  proplist.h  scene.cpp  scene.h
Model/Change/: change.cpp  change.h  changedealler.cpp  changedealler.h  changestore.cpp  changestore.h
Model/Selection/: selection.cpp  selection.h  selectiondealler.cpp  selectiondealler.h  selectionstore.cpp  selectionstore.h
View/: form.cpp  form.h  form.ui  graphicsscene.cpp  graphicsscene.h
